[package]
name = "chip8"
version = "0.1.0"
authors = ["Ferenc Nagy <ferenc.nagy1@ge.com>"]
edition = "2018"

[package.metadata.bootloader]
target = "x86_64-chip8.json"

[dependencies]
x86_64 = "0.2.6"
volatile = "0.2.3"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.bootloader]
version = "^0.5.1"
features = ["vga_320x200"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
